--- a/clase19/package.json
+++ b/clase19/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "mongoose": "^7.0.4",
     "session-file-store": "^1.5.0"
   }
 }
