--- a/clase20/package.json
+++ b/clase20/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clase19",
+  "name": "clase20",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,14 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "connect-mongo": "^5.0.0",
-    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.7",
-    "express-session": "^1.17.3",
     "mongoose": "^7.0.4",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "session-file-store": "^1.5.0"
+    "morgan": "^1.10.0"
   }
 }
