--- a/clase21/package.json
+++ b/clase21/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.0.4",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0"
   }
